# my-app

./: README.md  docker-compose.yml  dockerfile-vue  dockerfile-web  restart.sh  upload_backend.sh  upload_frontend.sh
my-app-backend/: application.json  config.json  go.mod  go.sum
my-app-backend/api/: api.json5  router.go  router_test.go
my-app-backend/auth/: jwt.go  jwt_test.go
my-app-backend/cmd/: cmd  hook_onstart.go  hook_onstart_test.go  main.go
my-app-backend/config/: conf.go  config.go  config_test.go
my-app-backend/db/: article_dao.go  db_model.go  gridfs_dao.go  gridfs_dao_test.go  sys_dao.go  sys_dao_test.go
my-app-backend/entity/: article.go  operation.go  sys.go  user.go  user_test.go
my-app-backend/entity/resp/: http_resp.go
my-app-backend/nosql/: redis_ops.go  redis_ops_test.go
my-app-backend/service/: article.go  email.go  email_test.go  sceduletask_test.go  scheduled.go  scheduled_test.go  scheduletask.go  site.go  static_src.go  static_src_test.go  user.go  user_test.go  ws.go  ws_test.go
my-app-backend/util/: base.go  base_test.go  logger.go
my-app-backend_r/: Cargo.toml
my-app-backend_r/src/: main.rs  mod.rs
my-app-backend_r/src/db/: article_dao.rs  gridfs_dao.rs  mod.rs
my-app-backend_r/src/entity/: article.rs  mod.rs  sys.rs  user.rs
my-app-backend_r/src/nosql/: redis_ops.rs
my-app-frontend/: 1.html  index.html  nginx.conf  package-lock.json  package.json  set_env.sh  vite.config.ts
my-app-frontend/src/: App.vue  main.ts  temp.html
my-app-frontend/src/common/: interface.ts  systemconstant.ts
(+111 files in other folders)
