[package]
name = "my-app-backend_r"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.20"
redis = {version = "0.21.5", features = ["tokio-comp"]}
mongodb = "2.2.2"
actix-web = "4.0.0"
flexi_logger = "0.22"
log = "0.4"
async_once = "0.2.6"
serde_json = "1.0.81"
lazy_static = "1.4.0"
tokio = "1.19.0"
serde = "1.0.137"
